--- a/unit_testing/Makefile
+++ b/unit_testing/Makefile
@@ -2,22 +2,24 @@ CXX = /opt/local/bin/g++-mp-4.5
 #CXX = /opt/local/bin/g++-mp-4.6
 #CXXFLAGS = -std=c++0x -pedantic -Wall -Wextra -g -O0 -I/opt/local/include/
 CXXFLAGS = -std=c++0x -pedantic -Wall -Wextra -O2 -I/opt/local/include/
-LIBS = -L/opt/local/lib -lboost_thread-mt
-INCLUDES = -I./
+LIBS = -L/opt/local/lib -lboost_thread-mt -L../ -lcppa
+INCLUDES = -I./ -I../
 
-EXECUTABLE = test
+EXECUTABLE = ../test
 
-HEADERS = cppa/test.hpp
+HEADERS = test.hpp
 
-SOURCES = src/main.cpp \
-		  src/test__a_matches_b.cpp \
-		  src/test__atom.cpp \
-		  src/test__intrusive_ptr.cpp \
-		  src/test__queue_performance.cpp \
-		  src/test__serialization.cpp \
-		  src/test__spawn.cpp \
-		  src/test__tuple.cpp \
-		  src/test__type_list.cpp
+SOURCES = hash_of.cpp \
+		  main.cpp \
+		  test__a_matches_b.cpp \
+		  test__atom.cpp \
+		  test__intrusive_ptr.cpp \
+		  test__local_group.cpp \
+		  test__queue_performance.cpp \
+		  test__serialization.cpp \
+		  test__spawn.cpp \
+		  test__tuple.cpp \
+		  test__type_list.cpp
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
