--- a/unit_testing/Makefile
+++ b/unit_testing/Makefile
@@ -18,6 +18,7 @@ SOURCES = hash_of.cpp \
 		  test__atom.cpp \
 		  test__intrusive_ptr.cpp \
 		  test__local_group.cpp \
+		  test__primitive_variant.cpp \
 		  test__queue_performance.cpp \
 		  test__serialization.cpp \
 		  test__spawn.cpp \
