to_string, from_string, uniform name improvements, type_list stuff, etc

--- a/unit_testing/Makefile
+++ b/unit_testing/Makefile
@@ -1,6 +1,6 @@
 include ../Makefile.rules
 
-INCLUDE_FLAGS = $(INCLUDES) -I../ ./
+INCLUDE_FLAGS = $(INCLUDES) -I../ -I./
 
 LIB_FLAGS = $(LIBS) -L../ -lcppa
 
