--- a/.gitignore
+++ b/.gitignore
@@ -8,15 +8,30 @@ test
 *.ii
 *.s
 *.tmp
+.deps/
+Makefile.in
+aclocal.m4
+autom4te.cache/
+depcomp
+install-sh
+libtool
+ltmain.sh
+missing
+unit_testing/Makefile.in
+unit_testing/.deps/
+config.*
+configure
+INSTALL
+m4/libtool.m4
+m4/lt*.m4
 a.out*
 queue_test
 cppa.creator.user
 8threads
 4threads
 libcppa.Makefile
-cpp0x_test
-cpp0x_test.dSYM/
+variadic_templates_test
+variadic_templates_test.dSYM/
 Makefile
-Makefile.rules
-libcppa.Makefile
+unit_testing/Makefile
 libcppa.so*
