--- a/unit_testing/Makefile.am
+++ b/unit_testing/Makefile.am
@@ -20,4 +20,8 @@ unit_tests_SOURCES =    hash_of.cpp \
                         test__type_list.cpp \
                         test__uniform_type.cpp
 
+unit_tests_DEPENDENCIES = ../.libs/libcppa.dylib
+
+AM_CPPFLAGS = -I../
+unit_tests_CXXFLAGS = --std=c++0x -pedantic -Wall -Wextra
 AM_LDFLAGS = $(BOOST_LDFLAGS) $(BOOST_THREAD_LIB) -L../.libs/ -lcppa
