--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ test
 *.ii
 *.s
 *.tmp
+*.la
+*.lo
+.libs/
 .deps/
 Makefile.in
 aclocal.m4
@@ -18,6 +21,7 @@ libtool
 ltmain.sh
 missing
 unit_testing/Makefile.in
+unit_testing/unit_tests
 unit_testing/.deps/
 config.*
 configure
