NO_VERSIONED_INCLUDE_DIR

--- a/configure.ac
+++ b/configure.ac
@@ -39,5 +39,9 @@ AS_IF(
 
 CPPFLAGS="$ORIGINAL_CPPFLAGS"
 
+# environment
+AC_ARG_VAR([NO_VERSIONED_INCLUDE_DIR], [set this to 1 in order to install headers into <prefix>/cppa/ rather than into <prefix>/cppa/<version>/cppa/])
+AM_CONDITIONAL([VERSIONED_INCLUDE_DIR], [test "x$NO_VERSIONED_INCLUDE_DIR" != "x1"])
+
 AC_CONFIG_FILES([Makefile unit_testing/Makefile libcppa.pc])
 AC_OUTPUT
