some performance tweaks

--- a/gen_server/Makefile
+++ b/gen_server/Makefile
@@ -1,5 +1,5 @@
-CXX = /opt/local/bin/g++-mp-4.6
-#CXX = /usr/bin/g++-4.6
+#CXX = /opt/local/bin/g++-mp-4.6
+CXX = /usr/bin/g++-4.6
 CXXFLAGS = -std=c++0x -pedantic -Wall -Wextra -I/opt/local/include/ -I../ -fpermissive -O2
 LIBS = -L../.libs/ -lcppa -L/opt/local/lib -L/usr/lib -lboost_thread-mt
 
