examples and documentation

--- a/Makefile.am
+++ b/Makefile.am
@@ -218,4 +218,4 @@ libcppa_la_LDFLAGS = -release $(PACKAGE_VERSION) $(BOOST_CPPFLAGS)
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libcppa.pc
 
-SUBDIRS = . unit_testing
+SUBDIRS = . unit_testing examples
