--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ test
 *.class
 benchmarks/mailbox_performance
 benchmarks/actor_creation
+benchmarks/mixed_case
 theron_mailbox_performance
 .libs/
 .deps/
