pattern matching improvements

--- a/Makefile.am
+++ b/Makefile.am
@@ -198,6 +198,7 @@ nobase_library_include_HEADERS = \
   cppa/util/is_legal_tuple_type.hpp \
   cppa/util/is_one_of.hpp \
   cppa/util/is_primitive.hpp \
+  cppa/util/option.hpp \
   cppa/util/producer_consumer_list.hpp \
   cppa/util/pt_dispatch.hpp \
   cppa/util/pt_token.hpp \
