--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ examples/announce_example_4
 examples/announce_example_5
 examples/hello_world_example
 examples/math_actor_example
+examples/dining_philosophers
