--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -9,7 +9,8 @@ noinst_PROGRAMS = announce_example_1 \
                   announce_example_4 \
                   announce_example_5 \
                   hello_world_example \
-                  math_actor_example
+                  math_actor_example \
+                  dining_philosophers
 
 announce_example_1_SOURCES = announce_example_1.cpp
 announce_example_2_SOURCES = announce_example_2.cpp
@@ -18,6 +19,7 @@ announce_example_4_SOURCES = announce_example_4.cpp
 announce_example_5_SOURCES = announce_example_5.cpp
 hello_world_example_SOURCES = hello_world_example.cpp
 math_actor_example_SOURCES = math_actor_example.cpp
+dining_philosophers_SOURCES = dining_philosophers.cpp
 
 EXAMPLES_LIBS = -L../.libs/ -lcppa $(BOOST_LDFLAGS) $(BOOST_THREAD_LIB)
 
@@ -28,4 +30,5 @@ announce_example_4_LDADD = $(EXAMPLES_LIBS)
 announce_example_5_LDADD = $(EXAMPLES_LIBS)
 hello_world_example_LDADD = $(EXAMPLES_LIBS)
 math_actor_example_LDADD = $(EXAMPLES_LIBS)
+dining_philosophers_LDADD = $(EXAMPLES_LIBS)
 
