--- a/gen_server/Makefile
+++ b/gen_server/Makefile
@@ -1,6 +1,6 @@
 #CXX = /opt/local/bin/g++-mp-4.6
-CXX = /usr/bin/g++-4.6
-CXXFLAGS = -std=c++0x -pedantic -Wall -Wextra -I/opt/local/include/ -I../ -fpermissive -O2
+CXX = /opt/local/bin/g++-mp-4.6
+CXXFLAGS = -std=c++0x -pedantic -Wall -Wextra -I/opt/local/include/ -I../ -fpermissive
 LIBS = -L../.libs/ -lcppa -L/opt/local/lib -L/usr/lib -lboost_thread-mt
 
 all:
