fixed vector api update + unit test

--- a/unit_testing/Makefile.am
+++ b/unit_testing/Makefile.am
@@ -6,6 +6,7 @@ noinst_PROGRAMS = unit_tests
 unit_tests_SOURCES =    main.cpp \
                         ping_pong.cpp \
                         test__atom.cpp \
+                        test__fixed_vector.cpp \
                         test__intrusive_ptr.cpp \
                         test__local_group.cpp \
                         test__pattern.cpp \
